# agentic-memory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/design/: ARCHITECTURE-knowledge-values.md  DOMAIN-MODEL-knowledge-values.md
docs/plans/: PLAN-knowledge-values-implementation.md
docs/requirements/: REQ-knowledge-values.md
scripts/: smoke_packaged_server.py
src/agentic_memory/: __init__.py  __main__.py  cli.py  server.py
src/agentic_memory/assets/: note-template-en.md  note-template.md  state-template.md
src/agentic_memory/core/: __init__.py  cleanup.py  config.py  dense.py  evidence.py  export.py  fallback.py  health.py  index.py  index_timestamps.py  note.py  query.py  rerank.py  scorer.py  search.py  sections.py  security.py  signals.py  state.py  stats.py  task_ids.py  tokenizer.py
src/agentic_memory/core/distillation/: __init__.py  extractor.py  prepare.py  service.py  trigger.py
src/agentic_memory/core/knowledge/: __init__.py  integrator.py  model.py  repository.py  service.py
src/agentic_memory/core/values/: __init__.py  agents_md.py  integrator.py  model.py  promotion.py  repository.py  service.py
tests/: conftest.py  test_agents_md.py  test_benchmark.py  test_cleanup.py  test_cli.py  test_config.py  test_distillation.py  test_distillation_tools.py  test_export.py  test_health.py  test_improvements.py  test_index.py  test_knowledge_integrator.py  test_knowledge_model.py  test_knowledge_repository.py  test_knowledge_service.py  test_knowledge_tools.py  test_note.py  test_promotion.py  test_query.py  test_scorer_generic.py  test_search.py  test_security.py  test_server.py  test_smoke_packaged_server.py  test_state.py  test_stats.py  test_values_integrator.py  test_values_model.py  test_values_repository.py  test_values_service.py  test_values_tools.py  test_version.py
