[project]
name = "agmemory"
version = "0.5.2"
description = "Persistent memory system for AI agents — session notes, rolling state, and RAG search"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "RK0429" },
]
keywords = [
    "ai",
    "agent",
    "memory",
    "rag",
    "mcp",
    "model-context-protocol",
    "session-notes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
japanese = [
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240716",
]
dense = [
    "numpy>=1.26.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "agmemory[japanese,dense]",
]

[project.scripts]
memory = "agentic_memory.cli:main"

[project.urls]
Homepage = "https://github.com/RK0429/agentic-memory"
Repository = "https://github.com/RK0429/agentic-memory"
Issues = "https://github.com/RK0429/agentic-memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["agentic_memory"]
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "coverage>=7.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
]
